[package]
name = "nano-9"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = [ "bevy_dev_tools" ] }
# bevy-inspector-egui = "0.28"
# bevy = { version = "0.13", default-features = false, features = [ "bevy_winit", "bevy_asset", "bevy_render" ] }
# bevy_asset_loader = "0.21"
# bevy_ecs_ldtk = { version = "0.11", optional = true }
bevy_mod_scripting = { version = "0.9.7", features = ["lua54", "core_functions"] }
bytemuck = "1.16.3"
thiserror = "1.0.63"
# bevy_pixel_buffer = "0.7.0"
bevy_minibuffer = "0.3.0"
bevy_minibuffer_inspector = { version = "0.1.0", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
bevy_ecs_tilemap = "0.15.0"
keyseq = { version = "0.5.0", features = ["bevy"] }
dasp = { version = "0.11.0", features = ["all"] }
bresenham = "0.1.1"
rand = "0.8.5"
tiny-skia = "0.11.4"
toml = "0.8.19"
atomicow = "1.0.0"
ldtk_rust = { version = "0.6.1", optional = true }
serde_json = { version = "1.0", optional = true }
bevy_ecs_tiled = { version = "0.5.1", optional = true }
bitflags = "2.8.0"
# tiled = "0.13.0"
tiled = { git = "https://github.com/mapeditor/rs-tiled.git", rev = "c434e1be8904917bacc1286c5334b721f1f6deef", features = ["world"] }
bitvec = "1.0.1"
# regex = "1.11.1"
# XXX: Don't leave this here.
# bevy_mod_debugdump = "0.12.1"

[features]
default = [ "level" ]
# level = [ "dep:bevy_ecs_ldtk", "dep:ldtk_rust", "dep:serde_json"]
# level = [ "dep:bevy_ecs_tiled", "dep:serde_json", "bevy_ecs_tiled/user_properties" ]
level = [ "dep:bevy_ecs_tiled", "dep:serde_json" ]
user_properties = [ "bevy_ecs_tiled/user_properties" ]
# level = [ "dep:bevy_ecs_tiled", "dep:serde_json" ]
inspector = [ "dep:bevy_minibuffer_inspector" ]

[dev-dependencies]
bevy = "0.15"

[[bin]]
name = "n9"
test = false
bench = false

[patch.crates-io]
bevy_minibuffer = { path = "../bevy_minibuffer" }
bevy_asky = { path = "../bevy_asky" }
bevy_ecs_tiled = { path = "../bevy_ecs_tiled" }
# bevy_ecs_ldtk = { path = "../bevy_ecs_ldtk" }
bevy_ecs_tilemap = { path = "../bevy_ecs_tilemap" }
ldtk_rust = { git = "https://github.com/nomnomab/ldtk_rust.git", branch = "1.5.3" }
bevy_minibuffer_inspector = { path = "../bevy_minibuffer_inspector" }
# bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui" }
bevy-inspector-egui = { path = "../bevy-inspector-egui/crates/bevy-inspector-egui" }
bevy_mod_scripting = { path = "../bevy_mod_scripting" }
# bevy_pixel_buffer = { path = "../bevy_pixel_buffer" }
# tiled = { git = "https://github.com/mapeditor/rs-tiled.git", rev = "c434e1be8904917bacc1286c5334b721f1f6deef", features = ["world"] }
