[package]
name = "nano9"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = [ "bevy_dev_tools" ] }
bevy_mod_scripting = { version = "0.11", features = ["lua54", "core_functions"] }
bytemuck = "1.16.3"
thiserror = "1.0.63"
bevy_minibuffer = { version = "0.3.0", optional = true }
bevy_minibuffer_inspector = { version = "0.1.0", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
bevy_ecs_tilemap = "0.15.0"
keyseq = { version = "0.5.0", features = ["bevy"] }
dasp = { version = "0.11.0", features = ["all"] }
bresenham = "0.1.1"
rand = "0.8.5"
tiny-skia = "0.11.4"
toml = "0.8.19"
atomicow = "1.0.0"
ldtk_rust = { version = "0.6.1", optional = true }
serde_json = { version = "1.0", optional = true }
bevy_ecs_tiled = { version = "0.6", optional = true }
bitflags = "2.8.0"
tiled = "0.14.0"
bitvec = "1.0.1"
futures-lite = { version = "2.6.0", optional = true }
bevy_rand = { version = "0.9.0", features = ["wyrand"] }
bevy_prng = "0.9.0"
pico8_decompress = { version = "0.1.0", git = "https://github.com/shanecelis/pico8_decompress.git" }

[features]
default = [ "level", "negate-y" ]
negate-y = []
# level = [ "dep:bevy_ecs_ldtk", "dep:ldtk_rust", "dep:serde_json"]
# level = [ "dep:bevy_ecs_tiled", "dep:serde_json", "bevy_ecs_tiled/user_properties" ]
level = [ "dep:bevy_ecs_tiled", "dep:serde_json", "dep:futures-lite" ]
user_properties = [ "bevy_ecs_tiled/user_properties" ]
# level = [ "dep:bevy_ecs_tiled", "dep:serde_json" ]
inspector = [ "minibuffer", "dep:bevy_minibuffer_inspector" ]
minibuffer = [ "dep:bevy_minibuffer" ]

[dev-dependencies]
bevy = "0.15"

[[bin]]
name = "n9"
test = false
bench = false

[patch.crates-io]
pico8_decompress = { path = "../pico8_decompress" }
bevy_ecs_tiled = { path = "../bevy_ecs_tiled" }
bevy_mod_scripting = { path = "../bevy_mod_scripting" }
# bevy_minibuffer = { path = "../bevy_minibuffer" }
# bevy_asky = { path = "../bevy_asky" }
# bevy_ecs_ldtk = { path = "../bevy_ecs_ldtk" }
bevy_ecs_tilemap = { path = "../bevy_ecs_tilemap" }
ldtk_rust = { git = "https://github.com/nomnomab/ldtk_rust.git", branch = "1.5.3" }
# bevy_minibuffer_inspector = { path = "../bevy_minibuffer_inspector" }
# bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui" }
# bevy-inspector-egui = { path = "../bevy-inspector-egui/crates/bevy-inspector-egui" }
# bevy_pixel_buffer = { path = "../bevy_pixel_buffer" }
# tiled = { git = "https://github.com/mapeditor/rs-tiled.git", rev = "c434e1be8904917bacc1286c5334b721f1f6deef", features = ["world"] }
